lab2/k8s/fruit-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fruit-service-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: fruit-service               # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
     labels:
       app: fruit-service             # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: bysdudent/fruit-service:lab2       # образ Docker
          imagePullPolicy: Always
          name: fruit-service           # ім'я контейнеру
          ports:
            - containerPort: 8080  # порт по якому можна звертатись до поди
